themes-placit : correction de l'affichage de la nav-bar (décalage du fond orange visible depuis la MAJ du thème)

--- a/themes/plateforme-citoyenne-theme/custom/scss/override/custom.scss
+++ b/themes/plateforme-citoyenne-theme/custom/scss/override/custom.scss
@@ -54,11 +54,13 @@
     text-transform: uppercase;
     background: #fbac28;
     padding: 0 8px;
+    height: 48px;
     -webkit-transition: all .2s ease;
     -o-transition: all .2s ease;
     -moz-transition: all .2s ease;
     transition: all .2s ease;
 	margin-left: -16px;
+	margin-right: 15px;
 }
 
 #th-global #pro-header .pro-top-header .container .pro-right .nav-logout .picto{
@@ -68,7 +70,7 @@ background-position: center;
 background-repeat: no-repeat;
 height : 16px;
 width : 16px;
-margin-bottom: -2px;
+margin-bottom: -5px;
 }
 
 #th-global #pro-header .pro-top-header .container .pro-right .nav-logout:hover .picto{
